test/sema/typeck/trait/generic-assoc-type-impl-specialize-err.dora
// Test that GenericAssoc with wrong specialized type is rejected
trait Foo[T] {
    type Bar;
}

impl Foo[String] for Int64 {
    type Bar = Bool;
}

trait Baz[T: Foo[U], U] {
    fn foo(x: [T as Foo[U]]::Bar): [T as Foo[U]]::Bar;
}

class MyClass

impl Baz[Int64, String] for MyClass {
    // [Int64 as Foo[String]]::Bar resolves to Bool, not Int64
    fn foo(x: Int64): Int64 { x }
}
